# FlowState

./: CONTRIBUTING.md  README.md  SESSION_feat-smoke-test.md  dummy.py  pyproject.toml
.flowstate/chroma_db/: chroma.sqlite3
flowstate/: __init__.py  main.py
flowstate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flowstate/.flowstate/chroma_db/: chroma.sqlite3
flowstate/cli/: clean.py  commit.py  finish.py  pack.py  start.py  status.py  style.py  todos.py  ui.py  watch.py
flowstate/core/: __init__.py  chat.py  cleaner.py  config.py  git_utils.py  learning.py  memory.py  packer.py  tasks.py  watcher.py
flowstate/gui/: __init__.py  app.py
